@@ -1,3 +1,7 @@
+2009-04-28  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* contrib/emacs/fricas.el: strip ctrl-m for MS-Windows
+
 2009-04-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/postpar.boot: Correct a typo.
